[gd_scene load_steps=8 format=3 uid="uid://dk8uaa8bnv7gi"]

[ext_resource type="Script" uid="uid://d4jws22i6w8gb" path="res://scripts/main/AvatarController.gd" id="1_q8u5g"]
[ext_resource type="Script" uid="uid://d18theq3fvann" path="res://scripts/main/Main.gd" id="1_wp0k4"]
[ext_resource type="Script" uid="uid://0fmg70vxirjn" path="res://scripts/main/UI.gd" id="11_wp0k4"]
[ext_resource type="Script" uid="uid://ce53ygukrvlyo" path="res://scripts/main/NLPClient.gd" id="12_qmy6f"]
[ext_resource type="Script" uid="uid://g2m0xsy3ub78" path="res://scripts/main/TTSManager.gd" id="13_mwfav"]
[ext_resource type="Texture2D" uid="uid://d3tid6ft1b0kl" path="res://assets/icons/ffffff/transparent/1x1/lorc/cog.svg" id="21_2ofn6"]
[ext_resource type="Script" uid="uid://b5lyof7mxsio6" path="res://scripts/main/AnimationSelector.gd" id="23_ebg2g"]

[node name="Main" type="Node3D"]
script = ExtResource("1_wp0k4")

[node name="Avatar" type="Node3D" parent="."]

[node name="Camera3D" type="Camera3D" parent="Avatar"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -0.0243422, 1.21522, 0.739377)
current = true

[node name="AvatarController" type="Node3D" parent="Avatar"]
script = ExtResource("1_q8u5g")

[node name="ModelPlaceholder" type="Node3D" parent="Avatar"]

[node name="DirectionalLight3D" type="DirectionalLight3D" parent="Avatar"]
transform = Transform3D(1, 0, 0, 0, 0.999417, -0.0341319, 0, 0.0341319, 0.999417, 0.190191, 1.10663, -2.10475)

[node name="UI" type="Control" parent="."]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("11_wp0k4")

[node name="Panel" type="Panel" parent="UI"]
layout_mode = 1
anchors_preset = 12
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_top = -171.0
offset_bottom = -1.0
grow_horizontal = 2
grow_vertical = 0

[node name="Label" type="Label" parent="UI/Panel"]
layout_mode = 0
offset_right = 40.0
offset_bottom = 23.0

[node name="TextEdit" type="TextEdit" parent="UI/Panel"]
layout_mode = 1
anchors_preset = 12
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_top = -88.0
offset_right = -123.0
grow_horizontal = 2
grow_vertical = 0
placeholder_text = "Ask me anything"
wrap_mode = 1

[node name="Button" type="Button" parent="UI/Panel"]
layout_mode = 1
anchors_preset = 3
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -115.0
offset_top = -65.0
grow_horizontal = 0
grow_vertical = 0
text = "Submit"

[node name="Console" type="RichTextLabel" parent="UI/Panel"]
layout_mode = 1
anchors_preset = 14
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
offset_top = -78.0
grow_horizontal = 2
grow_vertical = 2

[node name="SettingsSceneButton" type="TextureButton" parent="UI"]
layout_mode = 1
anchors_preset = 1
anchor_left = 1.0
anchor_right = 1.0
offset_left = -66.0
offset_bottom = 64.0
grow_horizontal = 0
texture_normal = ExtResource("21_2ofn6")
ignore_texture_size = true
stretch_mode = 6

[node name="NLPClient" type="Node3D" parent="."]
script = ExtResource("12_qmy6f")

[node name="TTSManager" type="Node3D" parent="."]
script = ExtResource("13_mwfav")

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="."]

[node name="LogicManager" type="Node3D" parent="."]

[node name="AnimationSelector" type="Node3D" parent="LogicManager"]
script = ExtResource("23_ebg2g")
